Fix alerts alignment

--- a/app/assets/stylesheets/sephora_style_guide/components/_alerts.scss
+++ b/app/assets/stylesheets/sephora_style_guide/components/_alerts.scss
@@ -15,7 +15,7 @@
   .alert-container {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
   }
 
   .alert-message {
